[package]
name = "speedrun_splits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livesplit-core = "0.12.0"
eframe = { version = "0.18.0", features = ["persistence"] }
log = "0.4.17"
simplelog = "0.12.0"
serde = "1.0.137"
toml = "0.5.9"
dialog = "0.3.0"
walkdir = "2"
clap = { version = "3.1.18", features = ["cargo"] }
itertools = "0.10.3"
